--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # our data
 data/
 
-#Our models
+# our models
 models*
 
-# 
+# results stored locally
+results*
+
+# file created with macOS
 .DS_Store
 
 # Byte-compiled / optimized / DLL files
